client/src/components/Navbar/nav.scss
/* Reset default Styles */
@-webkit-keyframes slide-bottom {
  0% {
    -webkit-transform: translateY(-100px);
    transform: translateY(-100px);
  }
  100% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
}
@keyframes slide-bottom {
  0% {
    -webkit-transform: translateY(-100px);
    transform: translateY(-100px);
  }
  100% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
}
.main-header-nav-container {
  width: 100vw;
  margin: 0;
  padding: 0;
  height: auto;
  text-align: left;
  background: white;
  height: 100px;
  display:flex;
  align-items: center;
  &.fixed-top {
    box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2);
    -webkit-animation: slide-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
      both;
    animation: slide-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
  }
  nav,
  .nav,
  .nav a,
  .nav ul,
  .nav li,
  .nav div {
    margin: 0;
    padding: 0;
    outline: none;
  }

  nav {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    flex-wrap: wrap;
    width:100%;
  }
  #menu {
    display: flex;
    align-items: flex-start;
    justify-content: space-around;
    flex-wrap: wrap;
    padding: 20px;
  }
  #menu.menu-open{
    @media (max-width:950px){
      position:fixed;
      min-height:100vh;
      z-index: 1250;
      top:85px;
      overflow:auto;
    }
  }
  .nav {
    padding: 10px 0px;
  }

  nav #logo > img {
    width: 100px;
    margin-left: 20px;
  }

  .nav a,
  .cta-bar a {
    text-decoration: none;
  }

  .nav li,
  .cta-bar li {
    list-style: none;
  }

  /* Menu Container */
  .nav,
  .cta-bar {
    display: inline-block;
    position: relative;
    cursor: default;
    z-index: 500;
    padding-left: 0.5em;
  }

  /* Menu List */
  .nav > li,
  .cta-bar > li {
    display: block;
    float: left;
  }

  /* Menu Links */
  .nav > li > a {
    position: relative;
    display: block;
    z-index: 510;
    height: 40px;
    padding: 0 15px;
    line-height: 40px;
    border-radius: 10px;

    font-family: "Poppins", Helvetica, Arial, sans-serif;
    font-weight: 600;
    font-size: 15px;
    color: #111111;
    letter-spacing: 2px;
    text-shadow: 0 0 1px rgba(0, 0, 0, 0.35);

    -webkit-transition: all 0.3s ease;
    -moz-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    -ms-transition: all 0.3s ease;
    transition: all 0.3s ease;
  }

  .nav > li > a > img {
    display: inline-block;
    height: 10px;
    padding: 0px 5px;
  }

  .nav > li:hover > a {
    background: linear-gradient(45deg, #fbbb3b, #ec8c24, #ec7c2d, #e45c2c);
    color: #000;
    border-radius: 10px;
    transition: 0.6s ease-in;
  }

  .nav > li:first-child > a {
    border-radius: 5px;
    border-left: none;
  }

  /* Menu Dropdown */
  .nav > li > div {
    position: absolute;
    display: block;
    width: 100%;
    top: 50px;
    left: 0;
    opacity: 0;
    visibility: hidden;
    overflow: hidden;
  }

  .cta-1 {
    background: transparent;
    font-size: 14px;
    font-weight: 700;
    letter-spacing: 1px;
    border: 3px solid #ec7c2d;
    color: #ec7c2d;
    border-radius: 30px;
    padding: 10px 30px;
  }
  .cta-2 {
    background: transparent;
    font-size: 14px;
    font-weight: 700;
    letter-spacing: 1px;
    border: 3px solid #ec7c2d;
    background: #ec7c2d;
    color: #fff;
    border-radius: 30px;
    padding: 10px 30px;
    margin-left: 20px;
  }
  .cta-1:hover,
  .cta-2:hover {
    box-shadow: 0px 0px 20px #ec8c24;
    transition: 0.5s ease;
  }
  .nav > li:hover > div {
    opacity: 1;
    visibility: visible;
    overflow: visible;
    padding: 20px;
    background: linear-gradient(360deg, #eee, #fff);
    border-radius: 20px;
  }

  .nav > li:hover > div > .nav-column > h3 {
    color: #111;
    text-transform: uppercase;
  }
  .nav > li:hover > div > .nav-column > ul li {
    padding: 5px 0px;
    display: list-item;
  }
  .nav > li:hover > div > .nav-column > ul li a {
    color: #ec8c24;
    font-weight: 500;
    letter-spacing: 1px;
  }
  .nav > li:hover > div > .nav-column > ul li a:hover {
    color: #e45c2c;
    font-weight: 700;
    transition: 0.8s ease;
  }

  #ham {
    margin: 25px 30px 0px 0px;
    padding: 5px;
    display: none;
    visibility: hidden;
  }
  .slice {
    display: block;
    height: 4px;
    width: 25px;
    border-radius: 5px;
    margin-bottom: 3px;
    background: #111;
  }
  #ham.open > .slice {
    background: #e45c2c;
    transition: 0.4s ease;
  }

  .elevated {
    transform: rotate(270deg);
    width: 14px;
    opacity: 0.8;
  }
  #toggle {
    display: none;
    visibility: hidden;
  }

  /* responsive design */
  @media screen and (max-width: 950px) {
    nav #logo > img {
      width: 80px;
    }

    #toggle:checked + #menu {
      display: block;
    }
    #ham {
      visibility: visible;
      display: block;
    }
    #menu {
      display: none;
      visibility: visible;
      height: 100vh;
      width: 100%;
      border-radius: 20px;
      background: linear-gradient(180deg, #eee, #fff);
    }
    #menu > .nav li {
      display: block;
      width: 100%;
    }
    .nav > li > div {
      max-height: 0;
      visibility: visible;
      opacity: 1;
      transition: max-height 0.2s ease;
    }
    .nav > li:hover > div {
      position: inherit;
      display: block;
      width: 100%;
      opacity: 1;
      // visibility: visible;
      margin-top: 20px;
      max-height: 900vh;
      margin: 20px 0px;
      background: transparent;
      margin-top: 0px;
      margin-bottom: 0;
      padding: 0px;
      box-shadow: none;
    }
    .nav > li:hover > div > .nav-column > ul > li > a {
      padding: 0 15px;
      line-height: 40px;
      font-family: "Poppins", Helvetica, Arial, sans-serif;
      font-weight: bold;
      font-size: 14px;
      letter-spacing: 1px;
      color: #222;
      text-shadow: 0 0 1px rgba(0, 0, 0, 0.35);
    }
    .nav > li:hover > div > .nav-column > ul > li > a:hover {
      padding: 15px;
      line-height: 40px;
      color: #e45c2c;
      letter-spacing: 1px;
      font-weight: 700;
      transition: 0.2s ease;
    }
    .cta-bar {
      display: flex;
      justify-content: space-between;
      flex-wrap: wrap;
    }
    .cta {
      display: block;
      margin: 10px;
    }
    #ham.open > .slice:last-child {
      display: none;
      visibility: hidden;
      transition: 0.1s;
    }
    #ham.open > .slice:first-child {
      background: #e45c2c;
      transform: rotate(45deg);
      transition: 0.3s ease;
    }
    #ham.open > .slice:nth-child(2) {
      background: #e45c2c;
      transform: rotate(135deg);
      margin-top: -7px;
      transition: 0.3s ease;
    }
  }
  .nav-user-container {
    text-decoration: none;
    .avtar-img {
      width: 50px;
      height: 50px;
      border-radius: 100%;
      overflow: hidden;
      margin-right: 0.2rem;
    }
    span {
      font-size: 0.9rem;
      color: #ec7c2d;
      font-weight: 800;
    }
  }
}

